[fix] archive nav invisible

--- a/_sass/fragaria/views/blog-archive.scss
+++ b/_sass/fragaria/views/blog-archive.scss
@@ -17,7 +17,7 @@
 .v-blog-archive-nav {
     display: none;
 
-    @include breakpoint(desktop up) {
+    @include breakpoint(tablet up) {
         display: grid;
         grid-column-gap: 4rem;
         grid-template-columns: 1fr 2fr;
@@ -36,4 +36,8 @@
     .topic-list {
         column-count: 4;
     }
+}
+
+.v-blog-archive-nav .archive-nav-list {
+    @include baseline(eta, $bodytype);
 }
